--- a/config.py.tmpl
+++ b/config.py.tmpl
@@ -4,3 +4,5 @@ CONSUMER_KEY = '...'
 CONSUMER_SECRET = '...'
 OAUTH_KEY = '...'
 OAUTH_SECRET = '...'
+EMAIL_RECIPIENTS = ['...']
+EMAIL_FROM = '...'
